@@ -390,6 +390,7 @@ $cache->delete('last5_tor_');
 $cache->delete('top5_tor_');
 $cache->delete('scroll_tor_');
 $cache->delete('torrent_poster_count_');
+$cache->delete('backgrounds_');
 $hashes = $cache->get('hashes_');
 if (!empty($hashes)) {
     foreach ($hashes as $hash) {
